@@ -4,26 +4,33 @@ import com.foodease.myapp.domain.*;
 import com.foodease.myapp.repository.*;
 import com.foodease.myapp.service.dto.request.*;
 import com.foodease.myapp.service.dto.response.*;
+import com.foodease.myapp.service.mapper.CartMapper;
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
+import java.util.List;
 import java.util.stream.Collectors;
+
+import static lombok.AccessLevel.PRIVATE;
 
 @Service
 @RequiredArgsConstructor
+@FieldDefaults(level = PRIVATE, makeFinal = true)
 public class CartService {
-    private final CartRepository cartRepo;
+    CartRepository cartRepo;
+    CartMapper cartMapper;
 
     @Transactional
     public CartResponse upsertCart(CartRequest req) {
         Cart cart = cartRepo.findByUserId(req.getUserId())
                 .orElseGet(() -> Cart.builder().
                         userId(req.getUserId())
-                        .createdAt(req.getCreatedAt())
+                        .createdAt(LocalDateTime.now())
                         .build());
 
-        // replace all items
         cart.getItems().clear();
         cart.getItems().addAll(req.getItems().stream().map(i ->
                 CartItem.builder()
@@ -31,34 +38,16 @@ public class CartService {
                         .menuItemId(i.getMenuItemId())
                         .quantity(i.getQuantity())
                         .build()
-        ).collect(Collectors.toList()));
+        ).toList());
 
         Cart saved = cartRepo.save(cart);
-        return toDto(saved);
+        return cartMapper.toDto(saved);
     }
 
     @Transactional(readOnly = true)
     public CartResponse getCart(Long userId) {
         return cartRepo.findByUserId(userId)
-                .map(this::toDto)
-                .orElse(CartResponse.builder()
-                        .userId(userId)
-                        .items(List.of())
-                        .build());
-    }
-
-    private CartResponse toDto(Cart c) {
-        return CartResponse.builder()
-                .id(c.getId())
-                .userId(c.getUserId())
-                .createdAt(c.getCreatedAt())
-                .items(c.getItems().stream().map(ci ->
-                        CartResponse.Item.builder()
-                                .id(ci.getId())
-                                .menuItemId(ci.getMenuItemId())
-                                .quantity(ci.getQuantity())
-                                .build()
-                ).collect(Collectors.toList()))
-                .build();
+                .map(cartMapper::toDto)
+                .orElseThrow(() -> new IllegalStateException("Cart not found for user: " + userId));
     }
 }
